[package]
name = "indradb-test"
version = "0.1.0"
authors = ["Ryan <ryanswrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.6", features = ["wasm-bindgen"] }

smart-contract = "0.2.0"
smart-contract-macros = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
schemars = "0.1.6"
uuid = { version = "0.7", features = ["stdweb", "v3", "v4"] }
indradb-lib = { git = "https://github.com/ryanswart/indradb", branch = "feat/extract-random" }
